--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
+    "date-fns": "^2.19.0",
     "react": "^17.0.2",
+    "react-date-range": "^1.1.3",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-table": "^7.6.3",
